# NLP_for_transformers

./: .gitignore  ChromaDB_test.ipynb  MNER.ipynb  Summarization.ipynb  Text_generation.ipynb  pipelines.ipynb  pyproject.toml
data/: text1.csv  text1.txt
distilbert-base-uncased-finetuned-emotion/: README.md
distilbert-base-uncased-finetuned-emotion/checkpoint-500/: rng_state.pth  trainer_state.json
