[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "bertviz>=1.4.1",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.8.0",
    "seqeval>=1.2.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
]
