[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "bertviz>=1.4.1",
    "chromadb>=1.4.0",
    "datasets==2.21.0",
    "elasticsearch>=9.2.1",
    "evaluate>=0.4.6",
    "google-genai>=1.56.0",
    "hf-xet>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "seqeval>=1.2.2",
    "testcontainers>=4.13.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
]
